--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
      "builds": [{
           "src": "todo_list/wsgi.py",
-          "use": "@verce1/python",
+          "use": "@vercel/python",
           "config": { "maxLambdasize": "15mb", "runtime": "python3.12" }
      }],
       "routes": [
