--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,27 @@
 {
-     "builds": [{
-          "src": "todo_list/wsgi.py",
-          "use": "@verce1/python",
-          "config": { "maxLambdasize": "15mb", "runtime": "python3.12" }
-     }],
-      "routes": [
-          {
-              "src": "/(.*)",
-              "dest": "todo_list/wsgi.py"
-          }
-        ]
-}
+    "version": 2,
+    "builds": [
+      {
+        "src": "todo_list/wsgi.py",
+        "use": "@vercel/python",
+        "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+      },
+      {
+        "src": "build_files.sh",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "staticfiles_build"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/static/(.*)",
+        "dest": "todo_list/wsgi.py"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "todo_list/wsgi.py"
+      }
+    ]
+  }
