--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
     "routes": [
       {
         "src": "/static/(.*)",
-        "dest": "todo_list/wsgi.py"
+        "dest": "/static/$1"
       },
       {
         "src": "/(.*)",
